cabal-version:  2.2

name:           hascaf
version:        0.1.0.0
synopsis:       Implementation of MiniDecaf in Haskell
description:    Please see the README on GitHub at <https://github.com/dramforever/hascaf#readme>
category:       Compiler
homepage:       https://github.com/dramforever/hascaf#readme
bug-reports:    https://github.com/dramforever/hascaf/issues
author:         dramforever
maintainer:     dramforever@live.com
copyright:      2020 dramforever
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple

extra-source-files:
  README.md

source-repository head
  type: git
  location: https://github.com/dramforever/hascaf

common common
  default-extensions:
    FlexibleContexts
    NumericUnderscores
    OverloadedStrings
    RankNTypes
    TypeFamilies
    UndecidableInstances
  ghc-options: -Wall
  build-depends:
      base >=4.7 && <5
    , containers
    , filepath
    , megaparsec
    , microlens-platform
    , mtl
    , parser-combinators
    , text
  default-language: Haskell2010

library
  import: common
  exposed-modules:
    Hascaf.Passes.Asm
    Hascaf.Passes.ASTCheck
    Hascaf.Passes.Label
    Hascaf.Passes.Lower
    Hascaf.Passes.Parser
    Hascaf.Passes.Stack
    Hascaf.Passes.Typing
    Hascaf.Types.AST
    Hascaf.Types.IR
    Hascaf.Utils.Compile
    Hascaf.Utils.Errors
    Hascaf.Utils.State
  hs-source-dirs: src

executable hascaf
  import: common
  main-is: Main.hs
  hs-source-dirs: app
  build-depends:
    hascaf
